dataset1235/2025-2/2868285114/users/1760111885/executions/3649835072_1927446959.log
== SUBMISSION (2025-08-19 23:02:05)
-- CODE: 
valorDeEntreda= float(input())

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:58:31)
-- CODE: 
valorDeEntrada= float(input())

vaLor1 = valorDeEntrada*(27/100)
valor2 = valorDeEntrada + valorDeEntrada*(42/100)
valor3 = valorDeEntrada - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:58:29)
-- CODE: 
valorDeEntrada= float(input())

vaLor1 = valorDeEntrada*(27/100)
valor2 = valorDeEntrada + valorDeEntrada*(42/100)
valor3 = valorDeEntrada - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:59:25)
-- CODE: 
valorDeEntreda= float(input())

vaLor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaLor1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:02:04)
-- CODE: 
valorDeEntreda= float(input())

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:58:20)
-- CODE: 
valorDeEntrada= float(input())

vaor1 = valorDeEntrada*(27/100)
valor2 = valorDeEntrada + valorDeEntrada*(42/100)
valor3 = valorDeEntrada - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor1,2))
                ^^^^^^
NameError: name 'valor1' is not defined. Did you mean: 'vaor1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:59:18)
-- CODE: 
valorDeEntreda= float(input())

vaLor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor3 = valorDeEntreda - valorDeEntrada*(63/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:59:10)
-- CODE: 
valorDeEntreda= float(input())

vaLor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntrada*(42/100)
valor3 = valorDeEntreda - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:59:09)
-- CODE: 
valorDeEntreda= float(input())

vaLor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntrada*(42/100)
valor3 = valorDeEntreda - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor1,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor2 = valorDeEntreda + valorDeEntrada*(42/100)
                              ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'valorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
